--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roast Page</title>
+    <title>Registration</title>
+    <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
-    
+    <div class="intro">
+        <div class="container container-intro">
+            <h1>Learn how to make <strong>the best BBQ ribs in town</strong></h1>
+        <p>Join us for this live webinar</p>
+        <p class="top-text">Mouthwatering delicious</p>
+        </div>
+    </div>
+    <div id="main-content" class="main">
+        <div class="container">
+            <h2>Become a BBQ master!</h2>
+        <p>Register Today</p>
+        <p>BBQ isn't standing in fornt grill with it on full and hoping for the best. It's an art! One way to speed up the process is to learn the best. You can do just that by singing up for this webinar</p>
+        <form id="form-collector" class="form" action="#" method="post">
+            <input name="firstName" type="text" placeholder="full name">
+            <input name="emailAddress" type="email" placeholder="email">
+            <button class="btn primary-btn" type="submit">Register</button>
+        </form>
+
+        <p class="fine-print">We'll never share your information without your permission</p>
+        </div>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
